[fix/fix-bug] fix gallery frontend masonry and filter + remove letter-spacing

--- a/src/editor/blocks/gallery/styles/style.scss
+++ b/src/editor/blocks/gallery/styles/style.scss
@@ -216,7 +216,6 @@
                 font-size: 13px;
                 line-height: 1.8;
                 text-transform: uppercase;
-                letter-spacing: 1px;
                 padding: 6px 15px;
                 cursor: pointer;
                 margin: 0 5px;
